force-app/main/default/objects/Supplier_Bill__c/Supplier_Bill__c.object-meta.xml
<CustomObject>
    <label>Supplier Bill</label>
    <nameField>
        <displayFormat>BILL-{YYYY}-{MM}-{000000}</displayFormat>
        <label>Supplier Bill</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Bills</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>