force-app/main/default/objects/Supplier_Bill__c/fields/Bill_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Closing_Date__c</fullName>
    <label>Bill Closing Date</label>
    <type>Date</type>
</CustomField>