force-app/main/default/objects/Supplier_Bill__c/fields/Bill_Opening_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Opening_Date__c</fullName>
    <label>Bill Opening Date</label>
    <type>Date</type>
</CustomField>