force-app/main/default/objects/Supplier_Bill__c/fields/Chart_of_Account__c.field-meta.xml
<CustomField>
    <fullName>Chart_of_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart of Account</label>
    <referenceTo>Chart_of_Account__c</referenceTo>
    <relationshipLabel>Supplier Bills</relationshipLabel>
    <relationshipName>Supplier_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>