force-app/main/default/objects/Supplier_Bill__c/fields/Is_Brand__c.field-meta.xml
<CustomField>
    <fullName>Is_Brand__c</fullName>
    <formula>$User.AccountId__c = Supplier_Name__r.Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Brand</label>
    <type>Checkbox</type>
</CustomField>