force-app/main/default/objects/Supplier_Bill__c/fields/Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance__c</fullName>
    <formula>Bill_Amount__c -  Total_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>