force-app/main/default/objects/Supplier_Bill__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ownership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Bills</relationshipLabel>
    <relationshipName>Supplier_Bills1</relationshipName>
    <type>Lookup</type>
</CustomField>