force-app/main/default/objects/Supplier_Bill__c/fields/Payment_Hold__c.field-meta.xml
<CustomField>
    <fullName>Payment_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Hold</label>
    <type>Checkbox</type>
</CustomField>