force-app/main/default/objects/Supplier_Bill__c/fields/PO_Settled_Date__c.field-meta.xml
<CustomField>
    <fullName>PO_Settled_Date__c</fullName>
    <formula>Purchase_Order__r.Supplier_Payment_Settled_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Settled Date</label>
    <type>Date</type>
</CustomField>