force-app/main/default/objects/Supplier_Bill__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Supplier Bills</relationshipLabel>
    <relationshipName>Supplier_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>