force-app/main/default/objects/Supplier_Bill__c/fields/Requestor_Name__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Name__c</fullName>
    <formula>CreatedBy.Alias</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requestor Name</label>
    <type>Text</type>
</CustomField>