force-app/main/default/objects/Supplier_Bill__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Supplier Bills</relationshipLabel>
    <relationshipName>Supplier_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>