force-app/main/default/objects/Supplier_Bill__c/fields/Sold_to_Party__c.field-meta.xml
<CustomField>
    <fullName>Sold_to_Party__c</fullName>
    <formula>Purchase_Order__r.Sold_to_Party_Legal_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold to Party</label>
    <type>Text</type>
</CustomField>