force-app/main/default/objects/Supplier_Bill__c/fields/Supplier_Address__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Address__c</fullName>
    <formula>Supplier_Name__r.BillingStreet &amp; BR() &amp; 
Supplier_Name__r.BillingCity &amp; &quot;, &quot; &amp; 
Supplier_Name__r.BillingState &amp; &quot; &quot; &amp; 
Supplier_Name__r.BillingPostalCode &amp; BR() &amp; 
Supplier_Name__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Address</label>
    <type>Text</type>
</CustomField>