force-app/main/default/objects/Supplier_Bill__c/fields/Supplier_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Bill_Date__c</fullName>
    <label>Supplier Bill Date</label>
    <type>Date</type>
</CustomField>