force-app/main/default/objects/Supplier_Bill__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Bills</relationshipLabel>
    <relationshipName>Supplier_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>