force-app/main/default/objects/Supplier_Bill__c/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <label>Total Payments</label>
    <summarizedField>Bill_Pay__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Bill_Pay__c.Supplier_Bill__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>