force-app/main/default/objects/Supplier_Bill__c/recordTypes/OPEX.recordType-meta.xml
<RecordType>
    <fullName>OPEX</fullName>
    <active>true</active>
    <label>OPEX</label>
</RecordType>