force-app/main/default/objects/Supplier_Bill__c/recordTypes/PO_Bill.recordType-meta.xml
<RecordType>
    <fullName>PO_Bill</fullName>
    <active>true</active>
    <label>PO Bill</label>
</RecordType>