force-app/main/default/objects/Supplier_Bill__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Purchase_Order__c</columns>
    <columns>Status__c</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Bill_Amount__c</columns>
    <columns>Payment_Terms__c</columns>
    <columns>Bill_Due_Date__c</columns>
    <columns>Outstanding_Balance__c</columns>
    <columns>Reference__c</columns>
    <columns>Payment_Hold__c</columns>
    <columns>Site__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>